# phd-utils

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
phd_utils/: database.py  units.py
src/phd_utils/: __init__.py  database.py  signal_preprocessing.py
src/phd_utils/curve_fitting/: __init__.py
