[project]
name = "phd-utils"
version = "0.1.0"
description = "Variety of utility code used in different projects during my PhD studies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.2",
    "pandas>=2.2.2",
    "plotly>=5.24.0",
    "pymongo>=4.8.0",
    "u8darts>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
